package DataGenerator;

public enum Sickness {
    ARITMIA, TACHICARDIA, FLUTTER, IPERTENSIONE, IPOTENSIONE, IPERTERMIA, IPOTERMIA
}
