package DataGenerator;

public enum Value {
    BP, HEART_RATE, TEMPERATURE
}
