@startuml

title __DATAGENERATOR's Class Diagram__\n

      class DataGenerator.BPGenerator {
          - canGenerateAlarm : boolean
          - meanD : double
          - meanS : double
          - randomD : Random
          - randomS : Random
          - varianceD : double
          - varianceS : double
          + BPGenerator()
          + evolve()
          + getValue()
          + reset()
      }


      class DataGenerator.DataThread {
          - numTask : int
          - run : boolean
          - store : Store<StringCommand>
          - taskJob : Value[]
          - tasks : ArrayList<TimerTask>
          - timers : ArrayList<Timer>
          - times : Long[]
          + DataThread()
          + interrupt()
          + restart()
          + start()
      }


      class DataGenerator.DataThread.DataTask {
          + DataTask()
          + run()
      }


      interface DataGenerator.GeneratorInterface {
          {abstract} + evolve()
          {abstract} + getValue()
          {abstract} + reset()
      }


      class DataGenerator.HeartRateGenerator {
          - canGenerateAlarm : boolean
          - mean : double
          - random : Random
          - variance : double
          + HeartRateGenerator()
          + evolve()
          + getValue()
          + reset()
      }


      enum Sickness {
        ARITMIA
        FLUTTER
        IPERTENSIONE
        IPERTERMIA
        IPOTENSIONE
        IPOTERMIA
        TACHICARDIA
      }


      class DataGenerator.TemperatureGenerator {
          - canGenerateAlarm : boolean
          - mean : double
          - random : Random
          - variance : double
          + TemperatureGenerator()
          + evolve()
          + getValue()
          + reset()
      }


      enum Value {
        BP
        HEART_RATE
        TEMPERATURE
      }


  DataGenerator.BPGenerator .up.|> DataGenerator.GeneratorInterface
  DataGenerator.BPGenerator o-- System.Sistema : sys
  DataGenerator.DataThread +-down- DataGenerator.DataThread.DataTask
  DataGenerator.DataThread.DataTask -up-|> java.util.TimerTask
  DataGenerator.DataThread.DataTask o-- DataGenerator.Value : value
  DataGenerator.HeartRateGenerator .up.|> DataGenerator.GeneratorInterface
  DataGenerator.HeartRateGenerator o-- System.Sistema : sys
  DataGenerator.TemperatureGenerator .up.|> DataGenerator.GeneratorInterface
  DataGenerator.TemperatureGenerator o-- System.Sistema : sys


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
